Construindo funcionalidade cartao de vacina.

--- a/application/modules/admin/views/scripts/cartao/visualisa-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/visualisa-cartao.phtml
@@ -230,34 +230,23 @@
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome completo:&nbsp;</th>
-                                        <th colspan="6">Leonardo DaVinci</th>
-
-
+                                        <th colspan="6"><?php echo $this->paciente->nome ?></th>
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome da mãe:&nbsp;</th>
-                                        <th colspan="6">Monalisa</th>
-
-
+                                        <th colspan="6"><?php echo $this->paciente->nome_mae ?></th>
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome do pai:&nbsp;</th>
-                                        <th colspan="6">Miquelangelo</th>
-
-
-
+                                        <th colspan="6"><?php echo $this->paciente->nome_pai ?></th>
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Data de Nascimento:&nbsp;</th>
-                                        <th colspan="6">18/02/1451</th>
-
-
+                                        <th colspan="6"><?php echo date('d/m/Y', strtotime($this->paciente->dt_nasc)) ?></th>
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Registro de Nascimento:&nbsp;</th>
-                                        <th colspan="6">5235487985</th>
-
-
+                                        <th colspan="6"><?php echo $this->paciente->registro_nasc ?></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -612,35 +601,24 @@
                                         <th colspan="7" style="background-color: #fcf8e3; color: #000; font-size: 20px;text-align: center;">Vacinas Aprazadas</th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #fcf8e3; color: #000;">Nome completo:&nbsp;</th>
-                                        <th colspan="6">Leonardo DaVinci</th>
-
-
+                                        <th style="background-color: #d9edf7; color: #000;">Nome completo:&nbsp;</th>
+                                        <th colspan="6"><?php echo $this->paciente->nome ?></th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #fcf8e3; color: #000;">Nome da mãe:&nbsp;</th>
-                                        <th colspan="6">Monalisa</th>
-
-
+                                        <th style="background-color: #d9edf7; color: #000;">Nome da mãe:&nbsp;</th>
+                                        <th colspan="6"><?php echo $this->paciente->nome_mae ?></th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #fcf8e3; color: #000;">Nome do pai:&nbsp;</th>
-                                        <th colspan="6">Miquelangelo</th>
-
-
-
+                                        <th style="background-color: #d9edf7; color: #000;">Nome do pai:&nbsp;</th>
+                                        <th colspan="6"><?php echo $this->paciente->nome_pai ?></th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #fcf8e3; color: #000;">Data de Nascimento:&nbsp;</th>
-                                        <th colspan="6">18/02/1451</th>
-
-
+                                        <th style="background-color: #d9edf7; color: #000;">Data de Nascimento:&nbsp;</th>
+                                        <th colspan="6"><?php echo date('d/m/Y', strtotime($this->paciente->dt_nasc)) ?></th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #fcf8e3; color: #000;">Registro de Nascimento:&nbsp;</th>
-                                        <th colspan="6">5235487985</th>
-
-
+                                        <th style="background-color: #d9edf7; color: #000;">Registro de Nascimento:&nbsp;</th>
+                                        <th colspan="6"><?php echo $this->paciente->registro_nasc ?></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -1562,10 +1540,8 @@
                                             (5) Mulher grávida que esteja com a vacina em dia, mas recebeu sua última dose há mais de 5 (cinco ) anos, precisa receber uma dose de reforço. A dose deve ser aplicada no mínimo 20 dias antes da data provável do parto. Em caso de ferimentos graves, a dose de reforço deve ser antecipada para cinco anos após a última dose.
                                         </td>
                                     </tr>
-
                                 </tbody>
                             </table>
-
                         </div>
                         <div class="tab-pane" id="rF">
 
@@ -1578,39 +1554,26 @@
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome completo:&nbsp;</th>
                                         <th colspan="6">Leonardo DaVinci</th>
-
-
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome da mãe:&nbsp;</th>
                                         <th colspan="6">Monalisa</th>
-
-
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Nome do pai:&nbsp;</th>
                                         <th colspan="6">Miquelangelo</th>
-
-
-
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Data de Nascimento:&nbsp;</th>
                                         <th colspan="6">18/02/1451</th>
-
-
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">Registro de Nascimento:&nbsp;</th>
                                         <th colspan="6">5235487985</th>
-
-
                                     </tr>
                                     <tr>
                                         <th style="background-color: #d9edf7; color: #000;">RG:&nbsp;</th>
                                         <th colspan="6">3335548747</th>
-
-
                                     </tr>
                                 </thead>
                                 <tbody>
