Correção consulta de vacina.

--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -5,8 +5,8 @@
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta">
             <option value="">Selecione a opção</option>
-            <option value="nome">Nome da vacina</option>
-            <option value="codigo">Código da vacina</option>
+            <option value="nome_vacina">Nome da vacina</option>
+            <option value="cod_vacina">Código da vacina</option>
             <option value="">Todos</option>
         </select>
         <div class="input-append">
