--- a/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
+++ b/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
@@ -10,164 +10,153 @@
 
     <div class="row-fluid">
 
-        <div  class ="span12">
-            <div  class ="span5">
+        <div  class ="span10">
+           
 
                 <table class="table table-bordered table-condensed ">
 
-                    <caption style="font-size: 20px;font-weight: bold;">Dados Principais</caption>
+                   <!-- <caption style="font-size: 20px;font-weight: bold;">Dados Cadastrais</caption> -->
                     <tbody  style="font-size: 13px;">
+                        <tr>
+                            <td style="background-color: #08c; color: #FFFFFF;font-size: 20px;font-weight: bold;text-align: center;" colspan="2">Dados Principais</td>
+                        </tr>
                         <tr class="info">
-                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Código do Funcionário:</td>
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;background-color: #08c; color: #FFFFFF;">Código do Funcionário:</td>
                             <td>12</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Nome do Funcionário:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Nome do Funcionário:</td>
                             <td>José da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Nome da Mãe:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Nome da Mãe:</td>
                             <td>Maria da Silva</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Nome do Pai:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Nome do Pai:</td>
                             <td>Maria da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Data de Nascimento:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Data de Nascimento:</td>
                             <td>06/10/1989</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">RG Nº:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">RG Nº:</td>
                             <td>Masculino</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">CPF Nº:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">CPF Nº:</td>
                             <td>Masculino</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Registro de Nascimento Nº:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Registro de Nascimento Nº:</td>
                             <td>Masculino</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Estado civil:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Estado civil:</td>
                             <td>Masculino</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Sexo:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Sexo:</td>
                             <td>Masculino</td>
                         </tr>
-                    </tbody>
-                </table>
-
-            </div>
-            <div  class ="span5 offset1">
-
-                <table class="table table-bordered table-condensed ">
-
-                    <caption style="font-size: 20px;font-weight: bold;">Dados Complementares</caption>
-                    <tbody  style="font-size: 13px;">
+                        <tr>
+                            <td style="background-color: #08c; color: #FFFFFF;font-size: 20px;font-weight: bold;text-align: center;" colspan="2">Endereço</td>
+                        </tr>
                         <tr class="info">
-                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Matrícula:</td>
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;background-color: #08c; color: #FFFFFF;">Endereço:</td>
                             <td>12</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Cargo:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Número:</td>
                             <td>José da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Função:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Complemento:</td>
                             <td>Maria da Silva</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Lotação:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Bairro:</td>
                             <td>Maria da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Unidade de Saúde:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">CEP:</td>
                             <td>06/10/1989</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Status:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">UF:</td>
                             <td>Masculino</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Telefone Residencial:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Cidade:</td>
                             <td>Masculino</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Telefone Celular:</td>
-                            <td>Masculino</td>
-                        </tr>
-
-                        <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">E-mail:</td>
-                            <td>Masculino</td>
-                        </tr>
-                        <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Perfil:</td>
-                            <td>Masculino</td>
+                            <td style="background-color: #08c; color: #FFFFFF;font-size: 20px;font-weight: bold;text-align: center;" colspan="2">Dados Complementares</td>
                         </tr>
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Usuário:</td>
-                            <td>Masculino</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-
-
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div  class ="span5">
-
-                <table class="table table-bordered table-condensed ">
-
-                    <caption style="font-size: 20px;font-weight: bold;">Endereço</caption>
-                    <tbody  style="font-size: 13px;">
-                        <tr class="info">
-                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Endereço:</td>
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;background-color: #08c; color: #FFFFFF;">Matrícula:</td>
                             <td>12</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Número:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Cargo:</td>
                             <td>José da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Complemento:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Função:</td>
                             <td>Maria da Silva</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">Bairro:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Lotação:</td>
                             <td>Maria da Silva</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">CEP:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Unidade de Saúde:</td>
                             <td>06/10/1989</td>
                         </tr>
                         <tr>
-                            <td style="font-size: 15px;font-weight: bold;">UF:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Status:</td>
                             <td>Masculino</td>
                         </tr>
 
                         <tr class="info">
-                            <td style="font-size: 15px;font-weight: bold;">Cidade:</td>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Telefone Residencial:</td>
                             <td>Masculino</td>
                         </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Telefone Celular:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">E-mail:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Perfil:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;background-color: #08c; color: #FFFFFF;">Usuário:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="background-color: #08c; color: #FFFFFF;height: 20px" colspan="2"></td>
+                        </tr>
+                    
 
                     </tbody>
                 </table>
             </div>
 
         </div>
-    </div>
+    
