Nova versao do banco

--- a/application/modules/admin/views/scripts/cartao/ver-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/ver-cartao.phtml
@@ -5,14 +5,14 @@
 
 </ul>
 <form>
-    <button class="btn btn-small btn-info" onclick="print()" type="button" title="Imprimir Cartão de Vacinas"><i class="icon-print icon-white"></i></button>
+    <button class="btn btn-small btn-info" id="print" type="button" title="Imprimir Cartão de Vacinas"><i class="icon-print icon-white"></i></button>
 </form>
 <hr>
 
 <br><br>
 
 
-<table class="table table-bordered table-condensed " style="font-size: 13px;">
+<table id="cartao-vacina" class="table table-bordered table-condensed " style="font-size: 13px;">
 
     <thead  style="font-size: 15px;">
         <tr>
